# 455-fair_order_dispatch

./: PROJECT_SUMMARY.md  README.md  final_submission_cn.ipynb  final_submission_en.html  final_submission_en.ipynb  pyproject.toml  rubric.xlsx
fair_order_dispatch-作业版本/: README.md  create_colab_package.py  final_submission_cn.ipynb  final_submission_en.ipynb  快速索引.md
fair_order_dispatch-作业版本/docs/: CHANGELOG.md  PLAN.md  PROGRESS.md  findings.md  progress_old.md  task_plan.md
results/: significance_tests.csv  statistical_summary.csv
scripts/: plot_results.py  run_multi_seed_experiments.py  statistical_analysis.py
submission_final/: SUBMISSION_NOTES.md  colab_one_click_runner.ipynb  final_submission_cn.ipynb  final_submission_en.ipynb  pyproject.toml  requirements.txt
submission_final2/: SUBMISSION_NOTES.md  colab_one_click_runner.ipynb  final_submission_cn.ipynb  final_submission_en.ipynb
submission_ready/: PROJECT_SUMMARY.md  colab_one_click_runner.ipynb  colab_one_click_runner_副本.ipynb  final_submission_cn.ipynb  final_submission_en.ipynb  pyproject.toml
submission_ready/docs/: COLABΣ╜┐τö¿µîçσìù.md
submission_ready/results/: baseline_shock_incomes.csv  multi_seed_results.csv  ppo_results.csv  ppo_shock_incomes.csv  significance_tests.csv  statistical_summary.csv
submission_ready/scripts/: evaluate_baselines.py
submission_ready/src/fair_dispatch/: __init__.py  baselines.py  config.py  metrics.py
submission_ready/tests/: test_notebook_deliverable.py  test_train_ppo.py
上传版本/: PROJECT_SUMMARY.md  final_submission_cn.ipynb  final_submission_en.ipynb
(+56 files in other folders)
