[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-dispatch"
version = "0.1.0"
description = "Regional fair order dispatch reinforcement learning prototype"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24,<2.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ppo = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
  "torch>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
